--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "framer-motion": "^11.0.5",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1",
+    "react-pdf": "^7.7.0"
   },
   "devDependencies": {
     "@types/node": "^20",
